--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -60,7 +60,7 @@ li {
   width: 50px;
   height: 50px;
   border: 5px solid black;
-  background: #006994;
+  /*background: #006994;*/
   cursor: pointer;
 }
 
@@ -75,6 +75,7 @@ li {
   width: 300px;
   float: left;
 }
+
 button > div.screen {
   background: yellow;
 }
@@ -107,4 +108,28 @@ input {
   border: 1px solid black;
   border-radius: 5px;
   text-align: center;
+}
+
+.description {
+  width: 840px;
+  padding: 20px;
+  margin: auto;
+  background: #cccccc;
+}
+
+.directions {
+  float: left;
+  width: 400px;
+  color: black;
+  text-shadow: 0 0 1px #000;
+  font-size: 24px;
+}
+
+.squares {
+  float: right;
+  width: 75px;
+}
+
+ul.squares > li {
+  margin-bottom: 60px;
 }
