--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,6 +34,10 @@
    background-image: url("https://i.ytimg.com/vi/LcL6oQdNzLg/maxresdefault.jpg");
  }
 
+ body {
+
+ }
+
  button {
    background: red;
    border: 1px solid black;
